.provarCaches/00D410000011HE0EAM/objects/rstk__socontcred__c.object
<CustomObject>
    <description>socontcred__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__socontcred_socontract__r.rstk__externalid__c &amp; &apos;_&apos; &amp; TEXT(rstk__socontcred_seqno__c)</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__socontcred_socontract__r.Name &amp; rstk__socontcred_seq__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socontcred_cbacctname__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Cheque Back Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socontcred_cbacctnum__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Cheque Back Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socontcred_cbbsbnumber__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Cheque Back BSB Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socontcred_comingback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Settlement Item Coming Back?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socontcred_desc__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__socontcred_fixedamt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Fixed Credit Amount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socontcred_newaddr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Unit&apos;s New Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__socontcred_origsocontract__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Original Contract</label>
        <referenceTo>rstk__socontract__c</referenceTo>
        <relationshipLabel>Contract Credits (Original Contract)</relationshipLabel>
        <relationshipName>socontcred_origsocontracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontcred_paymethod__c</fullName>
        <label>Cheque Back Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DD</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>EFT</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Bank Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__socontcred_price__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Credit Unit Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontcred_qty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Credit Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontcred_retshipsrl__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Settlement Shipped Item/Serial</label>
        <referenceTo>rstk__sowarr__c</referenceTo>
        <relationshipLabel>Contract Credits</relationshipLabel>
        <relationshipName>socontcreds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontcred_seq__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__socontcred_seqno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontcred_socontract__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Contract ID</label>
        <referenceTo>rstk__socontract__c</referenceTo>
        <relationshipLabel>Contract Credits</relationshipLabel>
        <relationshipName>socontcreds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__socontcred_soprod__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Product</label>
        <referenceTo>rstk__soprod__c</referenceTo>
        <relationshipLabel>Contract Credits</relationshipLabel>
        <relationshipName>socontcreds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontcred_soreason__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Reason for Credit</label>
        <referenceTo>rstk__soreason__c</referenceTo>
        <relationshipLabel>Contract Credits</relationshipLabel>
        <relationshipName>socontcreds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__socontcred_staycuraddr__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Unit Staying at Current Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__socontcred_totamount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total Credit Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontcred_type__c</fullName>
        <label>Credit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Service Credit</fullName>
                </value>
                <value>
                    <fullName>Rental Credit</fullName>
                </value>
                <value>
                    <fullName>Sponsorship</fullName>
                </value>
                <value>
                    <fullName>Product Credit</fullName>
                </value>
                <value>
                    <fullName>Cheque Back Payment</fullName>
                </value>
                <value>
                    <fullName>Settlement</fullName>
                </value>
                <value>
                    <fullName>Discounts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Z_OBSOLETE</label>
    <listViews>
        <fullName>rstk__RS_Contract_Credits</fullName>
        <columns>NAME</columns>
        <columns>rstk__socontcred_socontract__c</columns>
        <columns>rstk__socontcred_desc__c</columns>
        <columns>rstk__socontcred_seq__c</columns>
        <columns>rstk__socontcred_seqno__c</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__socontcred_type__c</columns>
        <columns>rstk__socontcred_qty__c</columns>
        <columns>rstk__socontcred_totamount__c</columns>
        <columns>rstk__socontcred_cbacctname__c</columns>
        <columns>rstk__socontcred_cbacctnum__c</columns>
        <columns>rstk__socontcred_cbbsbnumber__c</columns>
        <columns>rstk__socontcred_paymethod__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Contract Credits</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contract Credits Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Credit_Quantity_must_be_more_than_0</fullName>
        <active>true</active>
        <description>Credit Quantity must be more than 0</description>
        <errorConditionFormula>AND(ISPICKVAL(rstk__socontcred_type__c, &apos;Product Credit&apos;), 
OR(ISBLANK(rstk__socontcred_qty__c), rstk__socontcred_qty__c &lt;= 0))</errorConditionFormula>
        <errorDisplayField>rstk__socontcred_qty__c</errorDisplayField>
        <errorMessage>Credit Quantity must be more than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Credit_product_is_required</fullName>
        <active>true</active>
        <description>Credit product is required</description>
        <errorConditionFormula>AND(ISPICKVAL(rstk__socontcred_type__c, &apos;Product Credit&apos;), ISBLANK(rstk__socontcred_soprod__c))</errorConditionFormula>
        <errorDisplayField>rstk__socontcred_soprod__c</errorDisplayField>
        <errorMessage>Credit product is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Discount_Product_is_required</fullName>
        <active>true</active>
        <description>Discount Product is required</description>
        <errorConditionFormula>AND(ISPICKVAL(rstk__socontcred_type__c, &apos;Discounts&apos;), ISBLANK(rstk__socontcred_soprod__c))</errorConditionFormula>
        <errorDisplayField>rstk__socontcred_soprod__c</errorDisplayField>
        <errorMessage>Discount Product is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Free_Months_need_to_be_more_than_0</fullName>
        <active>true</active>
        <description>Free Months need to be more than 0</description>
        <errorConditionFormula>AND(ISPICKVAL(rstk__socontcred_type__c, &apos;Rental Credit&apos;), NOT(rstk__socontcred_fixedamt__c), 
OR(ISBLANK(rstk__socontcred_qty__c), rstk__socontcred_qty__c &lt;= 0))</errorConditionFormula>
        <errorDisplayField>rstk__socontcred_qty__c</errorDisplayField>
        <errorMessage>Free Months need to be more than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Original_contract_is_required</fullName>
        <active>true</active>
        <description>Original contract is required</description>
        <errorConditionFormula>AND(ISPICKVAL(rstk__socontcred_type__c, &apos;Settlement&apos;), ISBLANK(rstk__socontcred_origsocontract__c))</errorConditionFormula>
        <errorDisplayField>rstk__socontcred_origsocontract__c</errorDisplayField>
        <errorMessage>Original contract is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Payment_amount_must_be_more_than_0</fullName>
        <active>true</active>
        <description>Payment amount must be more than 0</description>
        <errorConditionFormula>AND(ISPICKVAL(rstk__socontcred_type__c, &apos;Cheque Back Payment&apos;), OR(ISBLANK(rstk__socontcred_totamount__c), rstk__socontcred_totamount__c &lt;= 0))</errorConditionFormula>
        <errorMessage>Payment amount must be more than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Payment_method_is_required</fullName>
        <active>true</active>
        <description>Payment method is required</description>
        <errorConditionFormula>AND(ISPICKVAL(rstk__socontcred_type__c, &apos;Cheque Back Payment&apos;), ISBLANK(TEXT(rstk__socontcred_paymethod__c)))</errorConditionFormula>
        <errorDisplayField>rstk__socontcred_paymethod__c</errorDisplayField>
        <errorMessage>Payment method is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Price_Per_Month_must_be_more_than_0</fullName>
        <active>true</active>
        <description>Price Per Month must be more than 0</description>
        <errorConditionFormula>AND(ISPICKVAL(rstk__socontcred_type__c, &apos;Rental Credit&apos;),
OR(ISBLANK(rstk__socontcred_price__c), rstk__socontcred_price__c &lt;= 0))</errorConditionFormula>
        <errorDisplayField>rstk__socontcred_price__c</errorDisplayField>
        <errorMessage>Price Per Month must be more than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Product_cannot_be_changed</fullName>
        <active>true</active>
        <description>Product cannot be changed</description>
        <errorConditionFormula>ISCHANGED(rstk__socontcred_soprod__c)</errorConditionFormula>
        <errorDisplayField>rstk__socontcred_soprod__c</errorDisplayField>
        <errorMessage>Product cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Rental_Product_is_required</fullName>
        <active>true</active>
        <description>Rental Product is required</description>
        <errorConditionFormula>AND(ISPICKVAL(rstk__socontcred_type__c, &apos;Rental Credit&apos;), ISBLANK(rstk__socontcred_soprod__c))</errorConditionFormula>
        <errorDisplayField>rstk__socontcred_soprod__c</errorDisplayField>
        <errorMessage>Rental Product is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Service_Free_Months_more_than0</fullName>
        <active>true</active>
        <description>Free Months need to be more than 0</description>
        <errorConditionFormula>AND(ISPICKVAL(rstk__socontcred_type__c, &apos;Service Credit&apos;), NOT(rstk__socontcred_fixedamt__c), 
OR(ISBLANK(rstk__socontcred_qty__c), rstk__socontcred_qty__c &lt;= 0))</errorConditionFormula>
        <errorDisplayField>rstk__socontcred_qty__c</errorDisplayField>
        <errorMessage>Free Months need to be more than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Service_Price_Per_Month_more_than_0</fullName>
        <active>true</active>
        <description>Price Per Month must be more than 0</description>
        <errorConditionFormula>AND(ISPICKVAL(rstk__socontcred_type__c, &apos;Service Credit&apos;),
OR(ISBLANK(rstk__socontcred_price__c), rstk__socontcred_price__c &lt;= 0))</errorConditionFormula>
        <errorDisplayField>rstk__socontcred_price__c</errorDisplayField>
        <errorMessage>Price Per Month must be more than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Service_Product_is_required</fullName>
        <active>true</active>
        <description>Service Product is required</description>
        <errorConditionFormula>AND(ISPICKVAL(rstk__socontcred_type__c, &apos;Service Credit&apos;), ISBLANK(rstk__socontcred_soprod__c))</errorConditionFormula>
        <errorDisplayField>rstk__socontcred_soprod__c</errorDisplayField>
        <errorMessage>Service Product is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Sponsorship_product_is_required</fullName>
        <active>true</active>
        <description>Sponsorship product is required</description>
        <errorConditionFormula>AND(ISPICKVAL(rstk__socontcred_type__c, &apos;Sponsorship&apos;), ISBLANK(rstk__socontcred_soprod__c))</errorConditionFormula>
        <errorDisplayField>rstk__socontcred_soprod__c</errorDisplayField>
        <errorMessage>Sponsorship product is required</errorMessage>
    </validationRules>
</CustomObject>